infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: xuantho2811/ticket-auth
          resources:
            limits:
              memory: "256Mi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      name: auth
      protocol: TCP
      targetPort: 3000
