infra/k8s/client-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-client-depl
spec:
  selector:
    matchLabels:
      app: ticket-client
  template:
    metadata:
      labels:
        app: ticket-client
    spec:
      containers:
        - name: ticket-client
          image: xuantho2811/ticket-client
          resources:
            limits:
              memory: "256Mi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticket-client-srv
spec:
  selector:
    app: ticket-client
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
