infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/api/users?(.*)"
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
